--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-leap-day
 title: 100 Days of Code - Round 3
 description: by James Priest
+
+# exclude: ['src/', 'gruntfile.js', 'package-lock.json', 'package.json']
