chore: Add dictionary of terms

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,29 @@
 {
     "cSpell.words": [
+        "Algo's",
+        "Anusha",
+        "DB's",
+        "Divya",
+        "FCC's",
+        "Iaas",
+        "JSONP",
+        "Joeylene",
+        "Kallaway's",
+        "Mikenzi",
+        "Nginx",
+        "Paas",
+        "Preflighting",
+        "Procfile",
+        "Saas",
+        "Tful",
+        "Whad'ya",
+        "aways",
+        "daysofcode",
+        "dont's",
         "gruntfile",
         "nanodegree",
+        "ncat",
+        "restdb",
         "srcset",
         "udacity",
         "udacity's"
