r4d90: React Bookshelf Project Ajax for Main Page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,8 +21,10 @@
         "daysofcode",
         "dont's",
         "gruntfile",
+        "myreads",
         "nanodegree",
         "ncat",
+        "reactnd",
         "restdb",
         "srcset",
         "udacity",
